Fix insane hamburger overflow

--- a/www/assets/style.scss
+++ b/www/assets/style.scss
@@ -91,7 +91,7 @@ body {
         display: none;
         margin-bottom: 1em;
 
-        flex-flow: row nowrap;
+        flex-flow: row wrap;
         gap: 1em 1ch;
     }
 }
